Fixed tabs wrapping onto a new line

--- a/frontend/app/styles/components/collections/_tabs.scss
+++ b/frontend/app/styles/components/collections/_tabs.scss
@@ -17,6 +17,7 @@
   align-items: baseline;
   justify-content: flex-start;
   overflow-x: auto;
+  white-space: nowrap;
 }
 
 .collection-tabs__refresh-button {
